# blueshift_ros

./: .gitignore  .gitmodules  LICENSE  README.md
blueshift_camera/: README.md  main.cpp  package.xml  setup.cfg  setup.py
blueshift_camera/blueshift_camera/: basic_image_publisher.py  basic_image_subscriber.py  webcam.py
blueshift_core/: CMakeLists.txt  package.xml
blueshift_core/src/: blueshift_driver.cpp  blueshift_hardware.cpp  holonomic.cpp  holonomic.hpp  subscriber_member_function.cpp
blueshift_core/src/holonomic/: holonomic.cpp  holonomic.hpp
blueshift_core/src/i2c/: i2c.cpp  i2c.hpp
blueshift_hardware/: package.xml  setup.cfg  setup.py
blueshift_hardware/blueshift_hardware/: pwm.py
blueshift_hardware/launch/: blueshift_hardware_launch.py
blueshift_interfaces/: CMakeLists.txt  package.json
blueshift_interfaces/msg/: Motors.msg  Num.msg  Time.msg
blueshift_interfaces/srv/: WebRTCOfferCommunication.srv
blueshift_interfaces/util/: generate_ts_interfaces.py
blueshift_web/: .gitignore  CMakeLists.txt  README.md  package.json  package.xml  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js
blueshift_web/launch/: simple.launch.py
blueshift_web/src/: hooks.ts
blueshift_web/src/lib/components/: CustomHeaderAction.svelte  ErrorWarningStatus.svelte  Header.svelte  OverlayToastNotifications.svelte  WebRTCVideo.svelte
blueshift_web/src/lib/ts/: gamepad_communication.ts  logger.ts  notification_manager.ts  ros_communication.ts
blueshift_web/src/lib/ts/utils/: ros2_msg_definitions.ts  ros_types.ts  roslib.shim.ts
blueshift_web/src/routes/: +layout.svelte  +page.svelte  +page.ts  __layout.svelte  index.svelte
src/blueshift-interface/: .gitignore  CMakeLists.txt  package-lock.json  package.json  package.xml  svelte.config.js
src/blueshift-interface/design/: blueshift-interface.sketch
src/blueshift-interface/launch/: example.launch.py  simple.launch.py
src/blueshift-interface/src/components/: CustomHeaderAction.svelte  OverlayToastNotifications.svelte  error_warning_status.svelte  header.svelte
src/blueshift-interface/src/lib/: gamepad_communication.ts  notification_manager.ts  ros_communication.ts  ros_connect.ts
src/blueshift-interface/src/routes/: __layout.svelte  copilot.svelte  debug.svelte  index.svelte  settings.svelte
src/blueshift_core/: package.xml
src/blueshift_core/src/: subscriber_member_function.cpp
src/blueshift_interface/: CMakeLists.txt  README.md  package.json  package.xml
src/blueshift_interface/launch/: simple.launch.py
src/blueshift_interface/src/components/: OverlayToastNotifications.svelte
src/blueshift_interface/src/lib/components/: Header.svelte  OverlayToastNotifications.svelte
src/blueshift_interface/src/lib/ts/: gamepad_communication.ts  logger.ts  ros_communication.ts
src/blueshift_interface/src/routes/: __layout.svelte  copilot.svelte  debug.svelte  index.svelte  settings.svelte
src/blueshift_interfaces/: .gitignore  CMakeLists.txt  package.xml
src/blueshift_interfaces/src/: generate_ts_interfaces.py
src/blueshift_interfaces/util/: generate_ts_interfaces.py
src/blueshift_web/: .gitignore  CMakeLists.txt  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
src/blueshift_web/design/: blueshift-interface.sketch
src/blueshift_web/src/lib/components/: ErrorWarningStatus.svelte  Header.svelte
src/blueshift_web/src/lib/ts/: logger.ts  notification_manager.ts  ros_communication.ts
src/blueshift_web/src/lib/ts/utils/: ros2_msg_definitions.ts
src/blueshift_web/src/routes/: __layout.svelte  debug.svelte  index.svelte
src/robot_core/: CMakeLists.txt  package.xml
src/robot_core/src/: subscriber_member_function.cpp
src/robot_movements/: CMakeLists.txt  package.xml
src/robot_movements/src/: testListener.cpp  testTalker.cpp
src/test_pkg/: CMakeLists.txt  package.xml
